--- a/js-task6/Page2-online.html
+++ b/js-task6/Page2-online.html
@@ -34,7 +34,7 @@
                 <th>点赞数</th>
                 <!--<th>talent</th>-->
                 <!--<th>level</th>-->
-                <th>操作</th>
+                <!--<th>操作</th>-->
                 <!--<th>joinTime</th>-->
                 <!--<th>wish</th>-->
                 <!--<th>updateAt</th>-->
@@ -52,10 +52,10 @@
                     <td> {{x.like}}</td>
                     <!--<td> {{x.talent}}</td>-->
                     <!--<td> {{x.level}}</td>-->
-                    <td>
-                        <button type="button" class="btn btn-success">查看</button>
-                        <button type="button" class="btn btn-warning">关闭</button>
-                    </td>
+                    <!--<td>-->
+                        <!--<button type="button" class="btn btn-success">查看</button>-->
+                        <!--<button type="button" class="btn btn-warning">关闭</button>-->
+                    <!--</td>-->
                     <!--<td> {{x.joinTime}}</td>-->
                     <!--<td> {{x.wish}}</td>-->
                     <!--<td> {{x.updateAt}}</td>-->
