--- a/js-task6/Page3.html
+++ b/js-task6/Page3.html
@@ -1,10 +1,6 @@
-<div>
 
-    <div>
-        <form id="myForm" name="myForm">
-            <input type="file" name="userfile"><input type="submit" value="上传">
-        </form>
-        <img>
+
+    <div class="main">
+        <simple-upload-book name="img" ng-model="$parent.img" required></simple-upload-book>
     </div>
 
-</div>
