--- a/js-task6/page-tab.html
+++ b/js-task6/page-tab.html
@@ -16,9 +16,9 @@
         <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
             <div class=" list-group">
                 <a href="" class="list-group-item " ui-sref=".Page1"><span class="nav-p">欢迎页</span></a>
-                <a href="" class="list-group-item" ui-sref=".Page2"><span class="nav-p">订单动态</span></a>
-                <a href="" class="list-group-item" ui-sref=".Page3"><span class="nav-p">今日报表</span></a>
-                <a href="" class="list-group-item" ui-sref=".Page4"><span class="nav-p">表单汇总</span></a>
+                <a href="" class="list-group-item" ui-sref=".Page2"><span class="nav-p">表格搜索</span></a>
+                <a href="" class="list-group-item" ui-sref=".Page3"><span class="nav-p">图片上传</span></a>
+                <a href="" class="list-group-item" ui-sref=".Page4"><span class="nav-p">表单验证</span></a>
             </div>
         </div>
     </div>
