--- a/js-task6/main.html
+++ b/js-task6/main.html
@@ -7,11 +7,14 @@
     <script src="js/jquery-2.0.js"></script>
     <link href="css/bootstrap.css" rel="stylesheet">
     <script src="js/bootstrap.js"></script>
+    <!--<script src="https://cdn.bootcss.com/angular.js/1.3.18/angular.min.js"></script>-->
     <script src="js/angular-1.5.8.js"></script>
     <script src="js/angular-ui-router.js"></script>
     <script src="js/angular-ui-bootstrap.js"></script>
-    <script src="js/ocLazyLoad.js"></script>
+    <!--<script src="js/constant.js"></script>-->
     <script src="js/app.js"></script>
+    <script src="js/ocLazyLoad.js"></script>
+
     <!--<script src="../../../../../ui-bootstrap/分页demo/page/js/index.js"></script>-->
 </head>
 <body data-ng-app="myApp">
