整理js任务代码

--- a/hsh/hsh.html
+++ b/hsh/hsh.html
@@ -72,17 +72,17 @@
       <h1 class="icon_lists clear  headline-sub2 ">
           <span style="font-size: 35px; line-height: 40px;color: white; padding-right: 45px;">JS</span>
           <a href="../js-task1/js-task1.html" target="_Blank"><i class="icon iconfont">&#xe600;</i></a>
-          <a href="../js-task2/js-task2.html" target="_Blank"><i class="icon iconfont">&#xe608;</i></a>
-          <a href="../js-task3/js-task3.html" target="_Blank"><i class="icon iconfont">&#xe601;</i></a>
-          <a href="../js-task4/js-task4-1.html" target="_Blank"><i class="icon iconfont">&#xe602;</i></a>
-          <a href="../js-task5-online/js-task5.html" target="_Blank"><i class="icon iconfont">&#xe605;</i></a>
-          <a href="../js-task6/one-login.html" target="_Blank"><i class="icon iconfont">&#xe609;</i></a>
-          <a href="../task7/task7-1.html" target="_Blank"><i class="icon iconfont">&#xe60a;</i></a>
-          <a href="../task8/task8.html" target="_Blank"><i class="icon iconfont">&#xe604;</i></a>
-          <a href="../task9/task9.html" target="_Blank"><i class="icon iconfont">&#xe607;</i></a>
-          <a href="../task10/task10-1.html" target="_Blank"><i class="icon iconfont">&#xe606;</i></a>
-          <a href="../task11/task11.html" target="_Blank"><i class="icon iconfont">&#xe60b;</i></a>
-          <a href="../task12/task12.html" target="_Blank"><i class="icon iconfont">&#xe60c;</i></a>
+          <a href="../js-task4/js-task4-00.html" target="_Blank"><i class="icon iconfont">&#xe608;-&#xe602;</i></a>
+          <!--<a href="../js-task3/js-task3.html" target="_Blank"><i class="icon iconfont">&#xe601;</i></a>-->
+          <!--<a href="../js-task4/js-task4-00.html" target="_Blank"></a>-->
+          <a href="../js-task6/one-login.html" target="_Blank"><i class="icon iconfont">&#xe605;-&#xe606;</i></a>
+          <!--<a href="../js-task6/one-login.html" target="_Blank"><i class="icon iconfont">&#xe609;</i></a>-->
+          <!--<a href="../task7/task7-1.html" target="_Blank"><i class="icon iconfont">&#xe60a;</i></a>-->
+          <!--<a href="../task8/task8.html" target="_Blank"><i class="icon iconfont">&#xe604;</i></a>-->
+          <!--<a href="../task9/task9.html" target="_Blank"><i class="icon iconfont">&#xe607;</i></a>-->
+          <!--<a href="../task10/task10-1.html" target="_Blank"><i class="icon iconfont"></i></a>-->
+          <!--<a href="../task11/task11.html" target="_Blank"><i class="icon iconfont">&#xe60b;</i></a>-->
+          <!--<a href="../task12/task12.html" target="_Blank"><i class="icon iconfont">&#xe60c;</i></a>-->
       </h1>
     </div>
 
