--- a/js-task4/js-task4-00.html
+++ b/js-task4/js-task4-00.html
@@ -6,12 +6,17 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/js-task4-00.css">
 </head>
+
 <body>
 <div class="ui">
     <div class="ui-text-group">
         <div class="ui-text">更多</div>
-        <div class="ui-text">更全<div class="ui-dot"></div></div>
-        <div class="ui-text">更好用<div class="ui-dot"></div></div>
+        <div class="ui-text">更全
+            <div class="ui-dot"></div>
+        </div>
+        <div class="ui-text">更好用
+            <div class="ui-dot"></div>
+        </div>
     </div>
 </div>
 </body>
