--- a/js-task4/js-task4-3.html
+++ b/js-task4/js-task4-3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1，maximum-scale=1">
-    <link rel="stylesheet" href="css/reset.css" >
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/js-task4-3.css">
     <title>杀手杀人</title>
 </head>
@@ -47,30 +47,28 @@
 
     <div class="vote" id="vote">
         <!--<div class="container">-->
-            <!--<div class="card">-->
-                <!--<p class="p2 bgcolor-active">水民</p>-->
-                <!--<p class="p3">1号</p>-->
-            <!--</div>-->
-            <!--<ul>-->
-                <!--<li class="icon4"></li>-->
-                <!--<li class="icon5"></li>-->
-                <!--<li class="icon6"></li>-->
-                <!--<li class="icon7"></li>-->
-            <!--</ul>-->
+        <!--<div class="card">-->
+        <!--<p class="p2 bgcolor-active">水民</p>-->
+        <!--<p class="p3">1号</p>-->
+        <!--</div>-->
+        <!--<ul>-->
+        <!--<li class="icon4"></li>-->
+        <!--<li class="icon5"></li>-->
+        <!--<li class="icon6"></li>-->
+        <!--<li class="icon7"></li>-->
+        <!--</ul>-->
         <!--</div>-->
     </div>
 </div>
+
+<!--重复写一个footer放在文档最底部把内容区撑起来，防止固定定位的按钮挡住文本内容-->
 <footer style="position: static;opacity: 0">
-
-        <div class="footer">确定</div>
-
+    <div class="footer">确定</div>
 </footer>
 
-<footer id="btn" >
-
-        <div class="footer">确定</div>
-
+<footer id="btn">
+    <div class="footer">确定</div>
 </footer>
-<script  type="text/javascript" src="js/js-task4-3.js"></script>
+<script type="text/javascript" src="js/js-task4-3.js"></script>
 </body>
 </html>
