--- a/js-task4/js-task4-4.html
+++ b/js-task4/js-task4-4.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1，maximum-scale=1">
-    <link rel="stylesheet" href="css/reset.css" >
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" type="text/css" href="css/js-task4-3.css">
     <title>投票</title>
 </head>
 <body>
 
 <div class="bg">
-
     <header>
         <span class="icon1"></span>
         <span class="tablecell">投票</span>
@@ -18,9 +17,7 @@
     </header>
 
     <div class="main">
-        <p>
-            发言讨论结束，大家请投票
-        </p>
+        <p>发言讨论结束，大家请投票</p>
 
         <audio controls="controls" id="music" preload hidden src="music/Kent.mp3"></audio>
         <button id="a" onclick="a();">
@@ -42,33 +39,15 @@
     </div>
     <div class="triangle-botom"></div>
     <p class="p1">点击得票数最多人的头像</p>
-
-    <div class="vote" id="vote">
-        <!--<div class="container">-->
-        <!--<div class="card">-->
-        <!--<p class="p2 bgcolor-active">水民</p>-->
-        <!--<p class="p3">1号</p>-->
-        <!--</div>-->
-        <!--<ul>-->
-        <!--<li class="icon4"></li>-->
-        <!--<li class="icon5"></li>-->
-        <!--<li class="icon6"></li>-->
-        <!--<li class="icon7"></li>-->
-        <!--</ul>-->
-        <!--</div>-->
-    </div>
+    <div class="vote" id="vote"></div>
 </div>
 <footer style="position: static;opacity: 0">
-
     <div class="footer">投死</div>
-
 </footer>
 
-<footer id="btn" >
-
+<footer id="btn">
     <div class="footer">投死</div>
-
 </footer>
-<script  type="text/javascript" src="js/js-task4-4.js"></script>
+<script type="text/javascript" src="js/js-task4-4.js"></script>
 </body>
 </html>
