--- a/js-task4/js-task4-6.html
+++ b/js-task4/js-task4-6.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1，maximum-scale=1">
-    <link rel="stylesheet" href="css/reset.css" >
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/head.css">
     <link rel="stylesheet" href="css/js-task4-6.css">
     <title>task6-2 游戏结果</title>
@@ -24,22 +24,9 @@
         <br>
         <span>平&nbsp&nbsp民<span id="y"></span>人</span>
     </p>
-<div id="dead-note">
-    <!--<div class="day1">-->
-        <!--<p>-->
-            <!--<span class="p3">第1天</span>-->
-            <!--<span class="p4">0小时07分</span>-->
-        <!--</p>-->
-        <!--<p class="p5">-->
-            <!--<span>晚上：5号被杀手杀死，5号是水民</span>-->
-            <!--<br>-->
-            <!--<span>白天：8号被全民投票投死，8号是杀手</span>-->
-        <!--</p>-->
-    <!--</div>-->
+    <div id="dead-note"></div>
 </div>
 
-
-</div>
 <footer style="position: static;opacity: 0;">
     <a href="task6-1.html">
         <button class="button-b1">再来一局</button>
