--- a/js-task6/Page2-online.html
+++ b/js-task6/Page2-online.html
@@ -3,27 +3,23 @@
         <span class="head">本日订单</span>
     </div>
     <div class="ma18">
+
+        <!--类型搜索-->
         <div class="mb18 bg-color-grey3 of-auto bba2 pt30">
             <div class="ml33 mb18 pull-left">
                 <span class="mr18">类型</span>
-                <input type="number" ng-model="search" oninput="if(value.length>1)value=value.slice(0,1)">
+                <input type="number" min="1" max="8" ng-model="search" oninput="if(value.length>1)value=value.slice(0,1)">
+                <!--ng-keypress="$event.preventDefault()" ng-paste="$event.preventDefault()" ng-focus="$event.preventDefault()"-->
                 <span>请输入1~8的数字</span>
             </div>
-            <!--<div class="ml33 mb18 pull-left">-->
-            <!--<span class="mr18">文档名</span>-->
-            <!--<input type="text" ng-model="search.name">-->
-            <!--</div>-->
-            <!--<div class="ml33 mb18 pull-left">-->
-            <!--<span class="mr18">上传者</span>-->
-            <!--<input type="text" ng-model="search.authorName">-->
-            <!--</div>-->
-
 
             <button ng-click="searchClick()" type="button" class="btn btn-info pull-right btn4 mb30 mr33 ml200">
                 <span class="glyphicon glyphicon-search"></span>搜索
             </button>
         </div>
         <div>
+
+            <!--表格开始-->
             <table class="table table-striped table-bordered table-hover table-condensed ">
                 <thead>
                 <th>序号</th>
@@ -32,15 +28,9 @@
                 <th>上传者</th>
                 <th>链接</th>
                 <th>点赞数</th>
-                <!--<th>talent</th>-->
-                <!--<th>level</th>-->
-                <!--<th>操作</th>-->
-                <!--<th>joinTime</th>-->
-                <!--<th>wish</th>-->
-                <!--<th>updateAt</th>-->
-                <!--<th>createAt</th>-->
                 </thead>
 
+            <!--表格内容通过ng-repeat自动生成-->
                 <tbody>
                 <tr ng-repeat="x in names">
                     <!--获取数组下标生成序号-->
@@ -50,36 +40,19 @@
                     <td> {{x.authorName}}</td>
                     <td><a href="{{x.url}}">链接</a></td>
                     <td> {{x.like}}</td>
-                    <!--<td> {{x.talent}}</td>-->
-                    <!--<td> {{x.level}}</td>-->
-                    <!--<td>-->
-                        <!--<button type="button" class="btn btn-success">查看</button>-->
-                        <!--<button type="button" class="btn btn-warning">关闭</button>-->
-                    <!--</td>-->
-                    <!--<td> {{x.joinTime}}</td>-->
-                    <!--<td> {{x.wish}}</td>-->
-                    <!--<td> {{x.updateAt}}</td>-->
-                    <!--<td> {{x.createAt}}</td>-->
-
                 </tr>
                 </tbody>
             </table>
-
         </div>
     </div>
+
+    <!--ui-bootstrap分页-->
     <nav class="pull-right mr18">
         <ul class="pagination-sm" uib-pagination total-items="num" ng-model="currentPage"
             max-size="maxSize" items-per-page="maxPerPage" boundary-links="true" force-ellipses="true"
-            previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></ul>
-        <!--<ul class="pagination"  ng-repeat="x in pageArr">-->
+            previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;">
 
-        <!--<li><a href="">{{x}}</a></li>-->
-        <!--&lt;!&ndash;<li><a href="">2</a></li>&ndash;&gt;-->
-        <!--&lt;!&ndash;<li><a href="">3</a></li>&ndash;&gt;-->
-        <!--&lt;!&ndash;<li><a href="">4</a></li>&ndash;&gt;-->
-        <!--&lt;!&ndash;<li><a href="">5</a></li>&ndash;&gt;-->
-        <!--</ul>-->
-
+        </ul>
     </nav>
 </div>
 
